assets/css/style.css
body {
    background-image:  url(../images/stars.jpg);
    color: white;
}

.header-row{
    padding: 50px;
    /* font-family: Marvel; */
}

.header-logo{
    height: 80px;
}

.card{
    border-color: white;
    background-color: #003366;
}

.card-header{
    background-color: #990000;
}

.card-title{
    padding-left: 20px;
}

